fix some weird spacing on the new org/user page

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -308,10 +308,11 @@ input {
 
 #new-user-page {
     //margin-top: $navbar-height;
+    margin-top: 2em;
 
-    form {
-        margin-top: 5em;
-    }
+    /* form { */
+    /*     margin-top: 5em; */
+    /* } */
     
     .btn-default {
         margin: 3em auto;        
